--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@
         </a>
 
         <div class="cta-email">
-          O escríbenos a <strong>contacto@cxdip.com</strong>
+          O escríbeme a <strong>ariel.salazar@cxdip.com</strong>
         </div>
       </div>
     </section>
