--- a/index.html
+++ b/index.html
@@ -1718,19 +1718,19 @@
       }
 
       // --- CTA correo (mailto + fallback Gmail web) ---
-      const TO = 'contacto@cxdip.com';
+      const TO = 'ariel.salazar@cxdip.com';
       const SUBJECT = 'Solicitud de demo CXDIP';
       const BODY =
 `Hola,
 
-Quiero agendar una demo de CXDIP (Loyalty 360° / Paneles CX).
+Quiero agendar una reunión, para explorar las alternativas.
+dejo mis datos de contacto:
 
-Mis datos:
 - Nombre:
 - Empresa:
 - País:
 - Teléfono:
-- Mejor horario:
+- Mejor día y horario:
 
 Gracias.`;
 
